	the macro GRAPHAPP_LIB that you can include in PKG_LIBS in
	Makevars.win (etc).  (GRAPHAPP_LIB is undefined in earlier
	versions, so this is backwards compatible).
	
    o	If the HTML Help Workshop fails when chm help is requested,
	package installation will continue with a warning.
	
    o	The C99 flag (-std=gnu99) is now used for compiling packages
	as well as R itself.


BUILDING R

    o	Cross-building does now lazy-load the base package.

    o	The Lea malloc is now used by regex.c, src/extra/pcre and
	src/extra/xdr.  (This is for potential performance gains.)

    o	There is an experimental option BUILD=F2C for use when there is
	no Fortran compiler installed, but there is a compatible f2c
	installed.  Set CC in the environment to point to the C
	compiler to be used.  (Some binary builds of gcc omit the
	Fortran compiler, and commercial C compilers generally do not
	have matching Fortran compilers.)


OTHERS

    o	Some 64-bit versions of Windows (e.g. Vista 64) allocate 4GB
	user address space to each process that is large-address aware
	(as the R processes are), and on those systems the default
	memory limit will be the smaller of the amount of RAM and
	3.5GB.

    o	Rcmd INSTALL --docs=chm now means 'CHM only' and not 'all' as
	in earlier versions of R.

    o	The afm files in library/grDevices/afm are now compressed,
	which reduces the installation size by ca 2Mb.

    o	Installing a package with 'SaveImage: yes' no longer looks at
	the .Renviron startup files, and so takes R_LIBS from the
	environnment.  This is consistent with lazyloading a package.

    o	The preferred build environment is to use gcc >= 4.2.1,
	specified via BUILD=GCC4 in MkRules (the default).  Set
	BUILD=GCC3 in MkRules if you have gcc 3.4.5.  There is support
	for a gcc4 cross-compiler via the CROSS-GCC macro in MkRules.

    o	Rcmd build now uses 'tar --force-local' so it should work with
	Cygwin and MSYS tar as well as that in Rtools.  This replaces